# ddd-tool

./: Cargo.toml  README.md
.omc/: project-memory.json
.omc/plans/: 2026-04-19-001-init-phase-planning.md  2026-04-19-setup-command-design.md  prd-fix-warnings.md
.omc/sessions/: 3494ea2d-bd87-4bfe-9567-523a749b1211.json
.omc/state/: agent-replay-4df2a63b-447e-4e80-8973-9fc11d2aa050.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-19T14-39-44-686Z.json  checkpoint-2026-04-19T14-41-20-971Z.json
.opencode/commands/: ddd-archive.bak  ddd-archive.md  ddd-exec.bak  ddd-exec.md  ddd-fix-exec.bak  ddd-fix-exec.md  ddd-fix-plan.bak  ddd-fix-plan.md  ddd-init.bak  ddd-init.md  ddd-prepare.bak  ddd-prepare.md  ddd-report.bak  ddd-report.md  ddd-resume.bak  ddd-resume.md  ddd-sync.bak  ddd-sync.md  ddd-verify.bak  ddd-verify.md
docs/: new_spec_v2.md
project_docs/: roadmap.json
project_docs/specs/: index.md  spec_commands.md  spec_core.md  spec_data_flow.md  spec_engineering.md  spec_state_machine.md
src/: main.rs
src/commands/: archive.rs  context.rs  exec.rs  fix_exec.rs  fix_plan.rs  init.rs  internal.rs  mod.rs  prepare.rs  report.rs  resume.rs  setup.rs  sync.rs  verify.rs
src/prompts/: mod.rs
src/state/: mod.rs  roadmap.rs
